--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -15,14 +15,20 @@
             </li>
 
             <li>
-                <a href="/Staff/Index/" aria-expanded="false">
-                    <i class="icon-notebook menu-icon"></i><span class="nav-text">Personeller</span>
+                <a href="/Room/Index/" aria-expanded="false">
+                    <i class="icon-lock menu-icon"></i><span class="nav-text">Odalar</span>
                 </a>
             </li>
 
             <li>
                 <a href="/Staff/Index/" aria-expanded="false">
                     <i class="icon-notebook menu-icon"></i><span class="nav-text">Personeller</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="/Service/Index/" aria-expanded="false">
+                    <i class="icon-clock menu-icon"></i><span class="nav-text">Hizmetler</span>
                 </a>
             </li>
 
